# sf-trader

./: .gitignore  README.md  config.yml  portfolio.csv  pyproject.toml  test.py  testing.py  trades.csv
scripts/: download_all_files.sh
sf_trader/: __main__.py  combinators.py  config.py  config_utils.py  constraints.py  data_utils.py  functions.py  ibkr.py  main.py  models.py  orders.py  orders_summary.py  portfolio.py  portfolio_summary.py  portfolio_utils.py  signals.py  silverfund.py  summary.py  trading_utils.py
sf_trader/DAL/: portfolio_dao.py
sf_trader/DAL/broker/: IB_gateway_client.py  __init__.py  broker_client.py  ibkr_client.py  test.py  test_client.py
sf_trader/DAL/dao/: portfolio_dao.py  surface_dao.py
sf_trader/DAL/doa/: portfolio_dao.py
sf_trader/DAL/models/: db_model.py  portfolio_metrics.py  schema_models.py  table_model.py
sf_trader/broker/: __init__.py  client.py  ibkr.py  test.py
sf_trader/components/: combinators.py  models.py  signals.py
sf_trader/components/broker/: client.py  ibkr.py  test.py
sf_trader/dal/broker/: IB_gateway_client.py  __init__.py  broker_client.py
sf_trader/domain/: computations.py  tables_ui.py
sf_trader/service/: calculate_service.py  order_service.py  portfolio_service.py  summary_service.py  ui_service.py
sf_trader/silverfund/: __init__.py  _alphas.py  _combinators.py  _data.py  _shares.py  _signals.py  _utils.py  _weights.py
sf_trader/ui/: tables.py
sf_trader/utils/: computations.py  data.py  functions.py  tables_ui.py
tests/: conftest.py  test_order_service.py  test_portfolio_service.py
(+4 files in other folders)
