[project]
name = "sf-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "dataframely>=2.1.0",
    "ibapi>=9.81.1.post1",
    "sf-quant>=0.1.15",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "rich>=14.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=sf_trader --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests",
]
